# wardrobe-user

./: .gitignore  LICENSE  README.md  pyproject.toml  wsgi.py
wardrobe/: bootstrap.py  cli.py
wardrobe/adaptors/repository/: __init__.py
wardrobe/adaptors/repository/mem/: __init__.py
wardrobe/adaptors/repository/sqla/: models.py  user_mixin.py
wardrobe/config/: user.py
wardrobe/domain/: commands.py  user.py
wardrobe/entrypoints/flask_app/: __init__.py  config.py  extensions.py  message_bus.py  utils.py
wardrobe/entrypoints/flask_app/templates/layouts/: base.html  with_navigation.html
wardrobe/entrypoints/flask_app/templates/partials/: nav.html
wardrobe/entrypoints/flask_app/templates/users/: login.html  register.html
wardrobe/entrypoints/flask_app/views/user/: __init__.py
wardrobe/repositories/: interface.py
wardrobe/request_objects/: __init__.py  register_user.py
wardrobe/service_layers/: handlers.py  message_bus.py
wardrobe/service_layers/unit_of_work/: __init__.py
wardrobe/use_cases/: __init__.py
wardrobe/use_cases/user/: register_user.py
wardrobe/views/: __init__.py
