[tool.poetry]
name = "wardrobe"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <yoophi@gmail.com>"]
packages = [{ include = "wardrobe" }]

[tool.poetry.dependencies]
python = "^3.9"
flask = "1.1.2"
flask-wtf = "^0.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
