[tool.poetry]
name = "wardrobe"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <yoophi@gmail.com>"]
packages = [{ include = "wardrobe" }]

[tool.poetry.dependencies]
python = "^3.9"
flask = "1.1.2"
Flask-Login = "^0.5.0"
Flask-WTF = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
